<resources>
    <string name="app_name">IT Shop</string>
    <string name="line_through">
        This is an <del>underline</del>.
    </string>
    <string name="title_activity_thong_tin">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">807943730148511</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dkdv1">Chào mừng bạn đến với ứng dụng mua bán thiết bị công nghệ IT Shop qua giao diện ứng dụng di động. Trước khi sử dụng ứng dụng IT Shop hoặc tạo tài khoản IT Shop (“Tài Khoản”), vui lòng đọc kỹ các Điều Khoản Dịch Vụ dưới đây và Quy Chế Hoạt Động của IT Shop để hiểu rõ quyền lợi và nghĩa vụ hợp pháp của mình đối với Công ty TNHH IT Shop và các công ty liên kết và công ty con của IT Shop (sau đây được gọi riêng là “IT Shop”, gọi chung là “chúng tôi”, “của chúng tôi”). “Dịch Vụ” chúng tôi cung cấp hoặc sẵn có bao gồm (a) Trang IT Shop, (b) các dịch vụ được cung cấp bởi Trang IT Shop và bởi phần mềm dành cho khách hàng của IT Shop có sẵn trên Trang IT Shop, và © tất cả các thông tin, đường dẫn, tính năng, dữ liệu, văn bản, hình ảnh, biểu đồ, âm nhạc, âm thanh, video (bao gồm cả các đoạn video được đăng tải trực tiếp theo thời gian thực (livestream)), tin nhắn, tags, nội dung, chương trình, phần mềm, ứng dụng dịch vụ (bao gồm bất kỳ ứng dụng dịch vụ di động nào) hoặc các tài liệu khác có sẵn trên Trang IT Shop hoặc các dịch vụ liên quan đến Trang IT Shop (“Nội Dung”). Bất kỳ tính năng mới nào được bổ sung hoặc mở rộng đối với Dịch Vụ đều thuộc phạm vi điều chỉnh của Điều Khoản Dịch Vụ này. Điều Khoản Dịch Vụ này điều chỉnh việc  bạn sử dụng Dịch Dụ cung cấp bởi IT Shop.</string>
    <string name="dkdv2">Trước khi trở thành Người Sử Dụng của Trang IT Shop, bạn cần đọc và chấp nhận mọi điều khoản và điều kiện được quy định trong, và dẫn chiếu đến, Điều Khoản Dịch Vụ này được dẫn chiếu theo đây.</string>
    <string name="dkdv3">IT Shop bảo lưu quyền thay đổi, chỉnh sửa, tạm ngưng hoặc chấm dứt tất cả hoặc bất kỳ phần nào của ứng dụng IT Shop hoặc Dịch Vụ vào bất cứ thời điểm nào theo qui định pháp luật. Phiên Bản thử nghiệm của Dịch Vụ hoặc tính năng của Dịch Vụ có thể không hoàn toàn giống với phiên bản cuối cùng.</string>
    <string name="dkdv4">IT Shop bảo lưu quyền từ chối yêu cầu mở Tài Khoản hoặc các truy cập của bạn tới ứng dụng IT Shop hoặc Dịch Vụ theo quy định pháp luật và Điều khoản dịch vụ.</string>
    <string name="dkdv5">BẰNG VIỆC SỬ DỤNG DỊCH VỤ HAY TẠO TÀI KHOẢN TẠI IT SHOP, BẠN ĐÃ CHẤP NHẬN VÀ ĐỒNG Ý VỚI NHỮNG ĐIỀU KHOẢN DỊCH VỤ NÀY VÀ CHÍNH SÁCH BỔ SUNG ĐƯỢC DẪN CHIẾU THEO ĐÂY.</string>
    <string name="path_drawer">M 3,6 L 3,8 L 21,8 L 21,6 L 3,6 z M 3,11 L 3,13 L 21,13 L 21, 12 L 21,11 L 3,11 z M 3,18 L 3,16 L 21,16 L 21,18 L 3,18 z</string>
    <string name="path_arrow">M 12, 4 L 10.59,5.41 L 16.17,11 L 18.99,11 L 12,4 z M 4, 11 L 4, 13 L 18.99, 13 L 20, 12 L 18.99, 11 L 4, 11 z M 12,20 L 10.59, 18.59 L 16.17, 13 L 18.99, 13 L 12, 20z</string>
    <string name="feedback">Share your feedback, queries, suggestion, good or bad, experience with us</string>
    <string name="dieu_khoan_dich_vu">ĐIỀU KHOẢN DỊCH VỤ</string>
    <string name="gio_hang_trong">Giỏ hàng bạn đang trống</string>
    <string name="tong_tien">Tổng tiền :</string>
    <string name="tiep_tuc_mua_hang">Tiếp tục mua hàng</string>
    <string name="thanh_toan">Thanh Toán</string>
    <string name="ban_chua_san_pham_nao">Bạn chưa mua sản phẩm nào</string>
    <string name="sap_xep">SẮP XẾP</string>
    <string name="profile">PROFILE</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="email">Email</string>
    <string name="mat_khau">Mật Khẩu</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="cap_nhat_thong_tin">Cập Nhật Thông Tin</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="gui_toi">Gửi tới:</string>
    <string name="ten_nguoi_nhan">Tên người nhận</string>
    <string name="dia_chi_label">Địa chỉ:</string>
    <string name="dia_chi_nguoi_nhan">Địa chỉ của người nhận</string>
    <string name="so_dien_thoai">Số điện thoại:</string>
    <string name="so_dien_thoai_nguoi_nhan">Số điện thoại của người nhận</string>
    <string name="tuy_chon_giao_hang">Tùy chọn giao hàng</string>
    <string name="thanh_toan_bang_paypal">Thanh toán bằng Paypal</string>
    <string name="cam_ket">Tôi cam kết các thông tin đặt hàng trên là chính xác!</string>
    <string name="dia_chi_map">117 Cống Quỳnh, Phường Nguyễn Cư Trinh, Quận 1, TP.HCM</string>
    <string name="thong_tin_ve_chung_toi">Thông tin về chúng tôi</string>
    <string name="ban_can_tim_gi">Bạn cần tìm gì ?</string>
    <string name="flash_sale">FLASH SALE ⚡</string>
    <string name="danh_muc_noi_bat">DANH MỤC NỔI BẬT</string>
    <string name="san_pham_moi_nhat">SẢN PHẨM MỚI NHẤT</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="chinh_hang">CHÍNH HÃNG</string>
    <string name="mien_phi">Miễn phí</string>
    <string name="van_chuyen">VẬN CHUYỂN</string>
    <string name="thu_tuc_doi_tra">Thủ tục đổi trả</string>
    <string name="de_dang">DỄ DÀNG</string>
    <string name="thanh_toan_mien_phi">THANH TOÁN MIỄN PHÍ</string>
    <string name="hinh_thuc_van_chuyen">HÌNH THỨC VẬN CHUYỂN</string>
    <string name="tim_kiem_chung_toi_tren">Tìm kiếm chúng tôi trên:</string>
    <string name="the_gioi_mua_sam">Thế giới mua sắm trong tầm tay bạn</string>
    <string name="giao_hang_thanh_toan">Giao hàng tận nơi + Thanh toán dễ dàng</string>
    <string name="bao_ve_nguoi_tieu_dung">100% bảo vệ người tiêu dùng</string>
    <string name="theo_doi_it_shop">Theo dõi IT Shop trên:</string>
    <string name="thich_ung_dung_nay">Thích ứng dụng này ?</string>
    <string name="danh_gia_chung_toi">Đánh giá chúng tôi 5 sao</string>
    <string name="san_pham_da_duoc_them">Sản phẩm đã được thêm vào giỏ hàng</string>
    <string name="xem_gio_hang">Xem giỏ hàng</string>
    <string name="dat_hang_thanh_cong">Đặt Hàng Thành Công</string>
    <string name="cam_on_da_mua_san_pham">Cảm ơn bạn đã mua sản phẩm của chúng tôi</string>
    <string name="xem_chi_tiet_don_hang">Xem Chi Tiết Đơn Hàng</string>
    <string name="xoa_san_pham">Xóa Sản Phẩm</string>
    <string name="xac_nhan_xoa">Bạn có chắc muốn xóa sản phẩm này không ?</string>
    <string name="khong">Không</string>
    <string name="co">Có</string>
    <string name="dat_hang">ĐẶT HÀNG</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="dang_ky">ĐĂNG KÝ</string>
    <string name="xac_nhan_don_hang">Đơn đặt hàng của bạn đã được xác nhận</string>
    <string name="thong_tin_khach_hang">THÔNG TIN KHÁCH HÀNG</string>
    <string name="ten_khach_hang">Tên Khách Hàng: </string>
    <string name="so_phone">Số Điện Thoại:</string>
    <string name="dia_chi_khach_hang">Địa Chỉ:</string>
    <string name="thong_tin_don_hang">THÔNG TIN ĐƠN HÀNG</string>
    <string name="ma_don_hang">Mã Đơn Hàng:</string>
    <string name="ten_sp">Tên Sản Phẩm:</string>
    <string name="so_luong">Số Lượng:</string>
    <string name="tong_thanh_toan">Tổng Thanh Toán:</string>
    <string name="ngay_dat_hang">Ngày đặt hàng:</string>
    <string name="thoi_gian_giao_hang">Đơn hàng của bạn sẽ được giao trong vòng 2 - 4 ngày</string>
    <string name="mien_phi_van_chuyen_toan_quoc">Miễn phí vận chuyển toàn quốc</string>
    <string name="chon_so_luong">CHỌN SỐ LƯỢNG:</string>
    <string name="san_pham_duoc_cung_cap">SẢN PHẨM ĐƯỢC CUNG CẤP BỞI</string>
    <string name="cam_ket_bao_hanh">Bảo hành 18 tháng - Đổi trả hàng miễn phí</string>
    <string name="cam_ket_chinh_hang">Đảm bảo chính hãng 100%</string>
    <string name="bao_ve_nguoi_mua_hang">Bảo vệ người mua hàng 100%</string>
    <string name="dam_bao_hai_long">Đảm bảo sự hài lòng</string>
    <string name="thong_so_ky_thuat">THÔNG SỐ KỸ THUẬT</string>
</resources>