<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_corner_16"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@color/colorRed"
        android:text="@string/xoa_san_pham"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@drawable/bg_yellow_corner_16_top"
        app:drawableStartCompat="@drawable/ic_delete" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#FFFFFF"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xac_nhan_xoa"
            android:textSize="14sp"
            android:fontFamily="@font/cuprum"
            android:textColor="@color/black"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginEnd="6dp"
            android:text="@string/khong"
            android:textColor="@color/purple_700"
            android:backgroundTint="#00BCD4"
            android:background="@drawable/bg_yellow_corner_10"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/co"
            android:textColor="@color/purple_700"
            android:layout_gravity="center"
            android:background="@drawable/bg_yellow_corner_10"
            android:backgroundTint="#FF9800"/>
    </LinearLayout>


</LinearLayout>