<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DieuKhoanBaoMatActivity"
    android:layout_margin="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ScrollViewCount,UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/coiny"
                android:gravity="center"
                android:text="@string/dieu_khoan_dich_vu"
                android:textColor="@color/colorRed"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/box_shadow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. "
                    android:textColor="@color/colorRed"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cuprum"
                    android:text="@string/dkdv1"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. "
                    android:textColor="@color/colorRed"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cuprum"
                    android:text="@string/dkdv2"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. "
                    android:textColor="@color/colorRed"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cuprum"
                    android:text="@string/dkdv3"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. "
                    android:textColor="@color/colorRed"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cuprum"
                    android:text="@string/dkdv4"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dkdv5"
                android:textStyle="italic"
                android:textColor="#005FED"
                android:layout_marginTop="2dp"
                android:textSize="16sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>